# PhD

./: .gitignore  setup.sh
sandbox/: CMakeLists.txt  build.sh  genetic_v1.py  genrand.cpp  gnn-comp-model  log-test  logcomp.cpp  main.c  nn.py  thermoswap.py  vec2.py
sandbox/atom-compiler/: CMakeLists.txt  crand.cpp  crand.h  gencomp.c  gencomp.h  genetic_v1.py  log-test  logcomp.cpp  logloader.py  main.c  morph_grid_solver_v5.py
sandbox/data/: 10k atoms - log  10k atoms - score 612051  log0  log1  log10  log100  log103  log104  log108  log11  log111  log115  log116  log117  log118  log121  log125  log127  log128  log133  log134  log135  log137  log14  log143  log144  log145  log147  log15  log150  log152  log153  log158  log159  log160  log162  log163  log164  log167  log169  (+456 more)
